--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -9,15 +9,15 @@
   "ALBUM_SINGLE": "专辑",
   "ARTIST": "艺术家",
   "ARTIST_SINGLE": "艺术家",
-  "ASCENDING": "Ascending",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
+  "ASCENDING": "升序",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "当前专辑播放完毕后自动添加其他歌曲至正在播放列表",
   "A_TO_Z": "A 到 Z",
   "BUFFERING": "缓冲中...",
   "CANCEL": "取消",
   "COLLECTION": "收藏",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的专辑吗？",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "您确定吗?",
-  "COLLECTION_INDEXING_HINT": "Adding your music ...",
+  "COLLECTION_INDEXING_HINT": "正在添加您的音乐 ...",
   "COLLECTION_INDEXING_LABEL": "您本地的音乐同步中。\n现在请不要关闭应用。",
   "COLLECTION_INFO_SUBHEADER": "关于专辑",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "更多专辑",
@@ -27,7 +27,7 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "您确定吗?",
   "COLLECTION_SEARCH_LABEL": "查找您的目录中",
   "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "在您的收藏夹中未搜到结果",
-  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "没有找到相关结果",
   "COLLECTION_SEARCH_WELCOME": "从您的收藏中搜索",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "搜索后保存的音乐将展示在这里。\n刷新查看最新。",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "最新专辑",
@@ -36,33 +36,33 @@
   "COLLECTION_TRACKS_SUBHEADER": "专辑中歌曲",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的歌曲吗?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "您确定吗?",
-  "COMING_UP": "开发中",
-  "CREATE": "Create",
-  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
-  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
+  "COMING_UP": "当前播放",
+  "CREATE": "创建",
+  "CREATE_NEW_PLAYLIST": "创建新的播放列表",
+  "CREATE_PLAYLIST_SUBHEADER": "创建新的播放列表以添加您的歌曲",
   "DATE_ADDED": "添加日期",
   "DELETE": "删除",
   "DELETE_TRACK": "删除歌曲",
-  "DESCENDING": "Descending",
+  "DESCENDING": "降序",
   "DISCORD": "DISCORD 服务器",
   "DOWNLOAD_UPDATE": "下载更新",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
-  "EXIT_NOW_PLAYING": "Exit now playing",
+  "EXIT_NOW_PLAYING": "退出正在播放",
   "EXIT_SUBTITLE": "您确定退出 Harmonoid 吗?",
   "EXIT_TITLE": "退出",
-  "GO_TO_SETTINGS": "GO TO SETTINGS",
+  "GO_TO_SETTINGS": "前往设置",
   "INTERNET_ERROR": "检查您的网络连接。",
-  "KNOW_MORE": "KNOW MORE",
+  "KNOW_MORE": "了解更多",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "您的收藏中需要只是包括一个目录。",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "歌词",
   "LYRICS_NOT_FOUND": "歌词未找到。",
   "LYRICS_RETRIEVING": "获取歌词中...",
   "MENU": "菜单",
-  "MUTE": "Mute",
+  "MUTE": "切换静音",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
-  "NEXT": "Next",
+  "NEXT": "下一个",
   "NO": "否",
   "NOTIFICATION_LYRICS_SUBTITLE": "在通知栏显示歌词。",
   "NOTIFICATION_LYRICS_TITLE": "通知栏歌词",
@@ -75,16 +75,16 @@
   "NO_DOWNLOAD_UPDATE": "您的应用已是最新版本",
   "NO_INTERNET_SUBTITLE": "检查您的网络",
   "NO_INTERNET_TITLE": "无网络连接",
-  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "NO_PLAYLISTS_FOUND": "未找到播放列表。\n创建后将会在此显示。",
   "N_TRACKS": "N tracks",
   "OK": "好的",
   "OPTIONS": "选项",
   "ORDER": "Order",
-  "PAUSE": "Pause",
-  "PLAY": "Play",
-  "PLAYLIST": "Playlists",
+  "PAUSE": "暂停",
+  "PLAY": "播放",
+  "PLAYLIST": "播放列表",
   "PLAYLISTS_CREATE": "创建一个新播放列表",
-  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
+  "PLAYLISTS_SUBHEADER": "您设备上可用的播放列表",
   "PLAYLISTS_TEXT_FIELD_HINT": "请输入播放列表名",
   "PLAYLISTS_TEXT_FIELD_LABEL": "播放列表名",
   "PLAYLIST_ADD_DIALOG_BODY": "选择播放列表添加歌曲",
@@ -94,9 +94,9 @@
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "推荐",
   "REFRESH": "刷新",
-  "REINDEX": "Reindex",
+  "REINDEX": "重新检索",
   "REMOVE": "移除",
-  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
+  "REMOVE_FROM_PLAYLIST": "从播放列表移除",
   "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "获取详情中",
@@ -108,7 +108,7 @@
   "SEARCH_NO_RECENT_SEARCHES": "您最近的搜索记录显示在这里",
   "SEARCH_RESULT_LOADER_LABEL": "获取您的音乐中...",
   "SEARCH_WELCOME": "Search Harmonoid...",
-  "SEE_ALL": "See All",
+  "SEE_ALL": "查看全部",
   "SELECTED_DIRECTORIES": "已选择目录：",
   "SELECTED_DIRECTORY": "已选择目录：",
   "SETTING": "设置",
@@ -141,30 +141,30 @@
   "SETTING_THEME_SUBTITLE": "切换应用至明亮或暗色主题",
   "SETTING_THEME_TITLE": "主题",
   "SHARE": "分享",
-  "SHOW_ALBUM": "Show album",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
-  "SHUFFLE": "Shuffle",
-  "SORT": "Sort",
-  "SORT_BY": "Sort By",
-  "SPEED": "Speed",
+  "SHOW_ALBUM": "显示专辑",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "在播放完一首歌曲后将自动跳转到 \"正在播放\" ",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "在任务栏显示播放进度",
+  "SHUFFLE": "随机播放",
+  "SORT": "排序",
+  "SORT_BY": "根据...排序",
+  "SPEED": "播放速度",
   "STARTING_PLAYBACK": "开启播放中",
   "SWITCH_THEME": "切换主题",
   "THEME_MODE_DARK": "暗色",
   "THEME_MODE_LIGHT": "明亮",
-  "THEME_MODE_SYSTEM": "System",
+  "THEME_MODE_SYSTEM": "跟随系统",
   "TRACK": "歌曲",
   "TRACKS_FROM_ARTIST": "来自该艺术家的歌曲。",
   "TRACK_SINGLE": "歌曲",
   "TRANSFERS": "传输",
-  "UNMUTE": "Unmute",
+  "UNMUTE": "关闭静音",
   "WARNING": "警告",
-  "YEAR": "Year",
+  "YEAR": "发行年份",
   "YES": "是",
   "YOUTUBE": "YouTube",
   "YOUTUBE_INTERNET_ERROR": "当前离线中，播放一些本地音乐吧。",
   "YOUTUBE_NO_RESULTS": "未找到结果。",
   "YOUTUBE_WELCOME": "搜索音乐或输入链接",
-  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
+  "YOUTUBE_WELCOME_SUBTITLE": "建议将根据您收听的内容显示在此处。",
   "YOUTUBE_WELCOME_TITLE": "Let's Go"
 }
