--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -10,7 +10,7 @@
   "ARTIST": "Sanatçılar",
   "ARTIST_SINGLE": "Sanatçı",
   "ASCENDING": "Artan",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Albüm bittikten sonra otomatik olarak koleksiyondan diğer müzikleri şimdi oynatılıyor'a ekle",
   "A_TO_Z": "A'dan Z'ye",
   "BUFFERING": "Yükleniyor",
   "CANCEL": "İPTAL",
@@ -52,15 +52,15 @@
   "EXIT_SUBTITLE": "Harmonoid'den çıkmak istediğine emin misin?",
   "EXIT_TITLE": "Çık",
   "GO_TO_SETTINGS": "AYARLARA GİT",
-  "INTERNET_ERROR": "İnternet bağlantını kontorl et",
+  "INTERNET_ERROR": "İnternet bağlantını kontrol et",
   "KNOW_MORE": "Daha fazla bilgi",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Koleksiyonunda en az bir klasör kalmalıdır.",
   "LISTENING_TO_MUSIC": "Müzik dinleniyor 💜",
   "LYRICS": "Sözler",
-  "LYRICS_NOT_FOUND": "Söz bulunamado.",
+  "LYRICS_NOT_FOUND": "Söz bulunamadı.",
   "LYRICS_RETRIEVING": "Sözler getiriliyor...",
   "MENU": "Menü",
-  "MUTE": "Mute",
+  "MUTE": "Sessiz",
   "M_TRACKS_AND_N_ALBUMS": "M Müzik ile N Albüm",
   "NEXT": "Sonraki",
   "NO": "HAYIR",
@@ -79,7 +79,7 @@
   "N_TRACKS": "N müzik",
   "OK": "TAMAM",
   "OPTIONS": "Seçenekler",
-  "ORDER": "Order",
+  "ORDER": "Sıra",
   "PAUSE": "Durdur",
   "PLAY": "Oynat",
   "PLAYLIST": "Oynatma listeleri",
@@ -97,7 +97,7 @@
   "REINDEX": "Yenile",
   "REMOVE": "SİL",
   "REMOVE_FROM_PLAYLIST": "Oynatma listesinden kaldır",
-  "REPEAT": "Repeat",
+  "REPEAT": "Tekrar",
   "RESULTS_FOR_QUERY": "\"QUERY\" için sonuçlar",
   "RETRIEVING_INFO": "Bilgiler getiriliyor...",
   "RETRIEVING_LINK": "Bağlantı getiriliyor...",
@@ -144,10 +144,10 @@
   "SHOW_ALBUM": "Albümü görüntüle",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Bir parça oynattıktan sonra \"Now playing\" ekranına geç",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
-  "SHUFFLE": "Shuffle",
-  "SORT": "Sort",
+  "SHUFFLE": "Karıştır",
+  "SORT": "Çeşit",
   "SORT_BY": "Sırala",
-  "SPEED": "Speed",
+  "SPEED": "Hız",
   "STARTING_PLAYBACK": "Oynatmaya başlanıyor...",
   "SWITCH_THEME": "Temayı değiştir",
   "THEME_MODE_DARK": "Karanlık",
