--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -48,7 +48,7 @@
   "DOWNLOAD_UPDATE": "アップデートをダウンロード",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
-  "EXIT_NOW_PLAYING": "Exit now playing",
+  "EXIT_NOW_PLAYING": "再生中を閉じる",
   "EXIT_SUBTITLE": "アプリを終了しますか？",
   "EXIT_TITLE": "終了",
   "GO_TO_SETTINGS": "設定に移動する",
@@ -60,7 +60,7 @@
   "LYRICS_NOT_FOUND": "歌詞が見つかりませんでした。",
   "LYRICS_RETRIEVING": "歌詞を受信中...",
   "MENU": "メニュー",
-  "MUTE": "Mute",
+  "MUTE": "ミュート",
   "M_TRACKS_AND_N_ALBUMS": "M トラック & N アルバム",
   "NEXT": "次へ",
   "NO": "いいえ",
@@ -97,7 +97,7 @@
   "REINDEX": "再インデックス",
   "REMOVE": "削除",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
-  "REPEAT": "Repeat",
+  "REPEAT": "リピート",
   "RESULTS_FOR_QUERY": "\"QUERY\" の検索結果",
   "RETRIEVING_INFO": "情報を取得中",
   "RETRIEVING_LINK": "ストリームを取得中",
@@ -144,10 +144,10 @@
   "SHOW_ALBUM": "アルバムを表示",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "音楽を再生した後、自動的に \"再生中\" の画面を表示する",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "タスクバーに音楽の進捗状況を表示する",
-  "SHUFFLE": "Shuffle",
-  "SORT": "Sort",
+  "SHUFFLE": "シャッフル",
+  "SORT": "並び替え",
   "SORT_BY": "Sort By",
-  "SPEED": "Speed",
+  "SPEED": "再生速度",
   "STARTING_PLAYBACK": "再生開始",
   "SWITCH_THEME": "テーマを変更",
   "THEME_MODE_DARK": "ダーク",
@@ -157,7 +157,7 @@
   "TRACKS_FROM_ARTIST": "トラック",
   "TRACK_SINGLE": "トラック",
   "TRANSFERS": "転送",
-  "UNMUTE": "Unmute",
+  "UNMUTE": "ミュート解除",
   "WARNING": "注意",
   "YEAR": "年",
   "YES": "はい",
