🌐 Add new strings

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Song löschen",
   "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVER",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "UPDATE DOWNLOADEN",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
