--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Delete track",
   "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVER",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
