--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Supprimer la piste",
   "DESCENDING": "Descendant",
   "DISCORD": "Serveur Discord",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "Télécharger la mise à jour",
   "ENABLE_125_SCALING": "Activer la mise à l'échelle à 125%",
   "ENABLE_ACRYLIC_BLUR": "TODOActiver le flou acrylique Windows",
