--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "गाना डिलीट करें",
   "DESCENDING": "Descending",
   "DISCORD": "डिस्कॉर्ड सर्वर",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "डाउनलोड अपडेट",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
