--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Szám törlése",
   "DESCENDING": "Descending",
   "DISCORD": "DISCORD SZERVER",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "FRISSÍTÉS LETÖLTÉSE",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Windows áttetsző háttér engedélyezése",
