--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Fafana ilay piste",
   "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVEUR",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "SINTOMY NY FANAVAOZANA VAOVAO",
   "ENABLE_125_SCALING": "Ampandehano ny tohatra manisa 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ampandehano ny 'Windows acrylic blur'.",
