--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Verwijder nummer",
   "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVER",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
   "ENABLE_125_SCALING": "Vergroting (125%) inschakelen",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylvervaging inschakelen",
