--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Deletar música",
   "DESCENDING": "Descendente",
   "DISCORD": "SERVIDOR DO DISCORD",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
