--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Удалить трек",
   "DESCENDING": "По убыванию",
   "DISCORD": "DISCORD",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
