--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Izbriši pesem",
   "DESCENDING": "Po abecedi nazaj",
   "DISCORD": "DISCORD STREŽNIK",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
