--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Radera låt",
   "DESCENDING": "Sjunkande",
   "DISCORD": "DISCORD SERVER",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "LADDA NER UPPDATERING",
   "ENABLE_125_SCALING": "Aktivera 125% uppskalning.",
   "ENABLE_ACRYLIC_BLUR": "Aktivera Windows akryl suddighet.",
@@ -66,7 +67,28 @@
   "NO": "NEJ",
   "NOTIFICATION_LYRICS_SUBTITLE": "Visa låttexter i en avisering.",
   "NOTIFICATION_LYRICS_TITLE": "Avisering låttexter",
+  "NOW_PLAYING": "Now playing",
+  "NOW_PLAYING_NEXT_TRACK": "NEXT",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Nothing is being played",
+  "NOW_PLAYING_PREVIOUS_TRACK": "PREVIOUS",
+  "NO_COLLECTION_SUBTITLE": "No music found.\nChange where to look for the music from settings.",
+  "NO_COLLECTION_TITLE": "Empty Collection",
+  "NO_DOWNLOAD_UPDATE": "Your app is already updated",
+  "NO_INTERNET_SUBTITLE": "Check your connection.",
+  "NO_INTERNET_TITLE": "No Internet",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
+  "OK": "OKAY",
+  "OPTIONS": "Options",
   "ORDER": "Order",
+  "PAUSE": "Pause",
+  "PLAY": "Play",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Create a new playlist",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Give a name to your new playlist...",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
+  "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track",
   "PLAYLIST_ADD_DIALOG_TITLE": "Lägg till spellista",
   "PLAYLIST_TRACKS_SUBHEADER": "Här är låtarna i denna spellista",
   "PLAY_NOW": "Spela nu",
@@ -76,6 +98,7 @@
   "REINDEX": "Omindexera",
   "REMOVE": "TA BORT",
   "REMOVE_FROM_PLAYLIST": "Ta bort från spellista",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Resultat för \"QUERY\"",
   "RETRIEVING_INFO": "Hämtar info",
   "RETRIEVING_LINK": "Hämtar stream",
@@ -97,7 +120,6 @@
   "SETTING_APP_VERSION_LATEST": "Senaste versionen",
   "SETTING_APP_VERSION_SUBTITLE": "Information om nuvarande version av applikationen",
   "SETTING_APP_VERSION_TITLE": "Version",
-  "REPEAT": "Repeat",
   "SETTING_GITHUB": "GITHUB",
   "SETTING_INDEXING_DONE": "Indexerad",
   "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexerat NUMBER_STRING av TOTAL_STRING låtar...",
@@ -126,6 +148,7 @@
   "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sortera Enligt",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "Startar uppspelning",
   "SWITCH_THEME": "Byt tema",
   "THEME_MODE_DARK": "Mörk",
@@ -135,6 +158,7 @@
   "TRACKS_FROM_ARTIST": "Låtar",
   "TRACK_SINGLE": "Låt",
   "TRANSFERS": "Överföringar",
+  "UNMUTE": "Unmute",
   "WARNING": "Varning",
   "YEAR": "År",
   "YES": "JA",
@@ -143,28 +167,5 @@
   "YOUTUBE_NO_RESULTS": "Inget sådant hittades.",
   "YOUTUBE_WELCOME": "Sök musik eller ange länk",
   "YOUTUBE_WELCOME_SUBTITLE": "Rekommendationer kommer syns här baserat på vad du lyssnar på.",
-  "YOUTUBE_WELCOME_TITLE": "Då kör vi",
-  "NOW_PLAYING": "Now playing",
-  "NOW_PLAYING_NEXT_TRACK": "NEXT",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Nothing is being played",
-  "SPEED": "Speed",
-  "NOW_PLAYING_PREVIOUS_TRACK": "PREVIOUS",
-  "NO_COLLECTION_SUBTITLE": "No music found.\nChange where to look for the music from settings.",
-  "NO_COLLECTION_TITLE": "Empty Collection",
-  "NO_DOWNLOAD_UPDATE": "Your app is already updated",
-  "NO_INTERNET_SUBTITLE": "Check your connection.",
-  "NO_INTERNET_TITLE": "No Internet",
-  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
-  "N_TRACKS": "N tracks",
-  "OK": "OKAY",
-  "UNMUTE": "Unmute",
-  "OPTIONS": "Options",
-  "PAUSE": "Pause",
-  "PLAY": "Play",
-  "PLAYLIST": "Playlists",
-  "PLAYLISTS_CREATE": "Create a new playlist",
-  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Give a name to your new playlist...",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
-  "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track"
+  "YOUTUBE_WELCOME_TITLE": "Då kör vi"
 }
