--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "删除歌曲",
   "DESCENDING": "降序",
   "DISCORD": "DISCORD 服务器",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "下载更新",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
