--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Musiqini sil",
   "DESCENDING": "Azalan",
   "DISCORD": "DISCORD SUNUCUSU",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "GÜNCƏLLƏ",
   "ENABLE_125_SCALING": "125% ölçəkləməni aktivləşdir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u aktivləşdir",
