--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "トラックを削除",
   "DESCENDING": "降順",
   "DISCORD": "Discordサーバー",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "アップデートをダウンロード",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
