--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -45,6 +45,7 @@
   "DELETE_TRACK": "Müziği sil",
   "DESCENDING": "Azalan",
   "DISCORD": "DISCORD SUNUCUSU",
+  "DISCOVERING_FILES": "Discovering files...",
   "DOWNLOAD_UPDATE": "GÜNCELLE",
   "ENABLE_125_SCALING": "125% ölçeklemeyi etkinleştir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u etkinleştir",
