--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -49,7 +49,7 @@
   "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
-  "EXIT_NOW_PLAYING": "Exit now playing",
+  "EXIT_NOW_PLAYING": "Sair agora da reprodução",
   "EXIT_SUBTITLE": "Você quer nos deixar?",
   "EXIT_TITLE": "Sair",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
@@ -83,7 +83,7 @@
   "ORDER": "Pedido",
   "PAUSE": "Pausar",
   "PLAY": "Reproduzir",
-  "PLAYLIST": "Listas de reprodução",
+  "PLAYLIST": "Playlist",
   "PLAYLISTS_CREATE": "Criar uma nova lista de reprodução",
   "PLAYLISTS_SUBHEADER": "Listas de reprodução disponíveis no seu dispositivo",
   "PLAYLISTS_TEXT_FIELD_HINT": "Dê um nome para sua nova lista de reprodução",
@@ -98,7 +98,7 @@
   "REINDEX": "Reindexar",
   "REMOVE": "REMOVER",
   "REMOVE_FROM_PLAYLIST": "Remover da lista de reprodução",
-  "REPEAT": "Repeat",
+  "REPEAT": "Repitir",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
   "RETRIEVING_LINK": "Recuperando fluxo",
